Fixed coloring and spacing issue

--- a/css/gahan-styles.css
+++ b/css/gahan-styles.css
@@ -22,10 +22,20 @@ nav .brand-logo{
 	padding-left: 40px;
 }
 
-.side-nav li,.side-nav.fixed a,.side-nav a{
-	line-height: 40px;
+.side-nav.fixed a,.side-nav a{
+	line-height: 55px;
 	height: 55px;
 	color: #fafafa;
+}
+
+.side-nav li{
+	height: 55px;
+	transition: background-color .3s;
+}
+
+.side-nav li:hover{
+	background-color: #37474f; 
+	/*blue-grey darken-3*/
 }
 
 .side-nav div.row{
